Use artifactory to publish and pull depenencies to/from
Part of https://github.com/OpenBankingToolkit/openbanking-toolkit/issues/7

--- a/pom.xml
+++ b/pom.xml
@@ -204,15 +204,35 @@
     </scm>
 
     <distributionManagement>
+<!--        <repository>-->
+<!--            <id>bintray-openbankingtoolkit-OpenBankingToolkit</id>-->
+<!--            <name>OpenBankingToolkit UK datamodel</name>-->
+<!--            <url>https://api.bintray.com/maven/openbanking-toolkit/OpenBankingToolKit/openbanking-uk-datamodel/;publish=1</url>-->
+<!--        </repository>-->
         <repository>
-            <id>bintray-openbankingtoolkit-OpenBankingToolkit</id>
-            <name>OpenBankingToolkit UK datamodel</name>
-            <url>https://api.bintray.com/maven/openbanking-toolkit/OpenBankingToolKit/openbanking-uk-datamodel/;publish=1</url>
+            <id>maven.forgerock.org-community</id>
+            <name>maven.forgerock.org-releases</name>
+            <url>https://maven.forgerock.org:443/repo/community</url>
         </repository>
+        <snapshotRepository>
+            <id>maven.forgerock.org-community-snapshots</id>
+            <name>maven.forgerock.org-snapshots</name>
+            <url>https://maven.forgerock.org:443/repo/community</url>
+        </snapshotRepository>
     </distributionManagement>
 
 
     <repositories>
+        <repository>
+            <id>maven.forgerock.org-community</id>
+            <name>maven.forgerock.org-releases</name>
+            <url>https://maven.forgerock.org:443/repo/community</url>
+        </repository>
+        <repository>
+            <id>maven.forgerock.org-community-snapshots</id>
+            <name>maven.forgerock.org-snapshots</name>
+            <url>https://maven.forgerock.org:443/repo/community</url>
+        </repository>
         <repository>
             <id>jcenter</id>
             <url>https://jcenter.bintray.com/</url>
