--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
         with: # running setup-java and overwrites the settings.xml
           java-version: '11'
           architecture: x64
-          server-id: central # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: MAVEN_USERNAME # env variable for username in deploy
-          server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
+          server-id: maven.forgerock.org-community # Value of the distributionManagement/repository/id field of the pom.xml
+          server-username: REPOSITORY_USERNAME # env variable for username in deploy
+          server-password: REPOSITORY_ACCESS_TOKEN # env variable for token in deploy
 
       - name: Set up snapshot forgerock maven repository
         if: contains(github.ref, 'SNAPSHOT')
@@ -25,13 +25,13 @@ jobs:
         with: # running setup-java and overwrites the settings.xml
           java-version: '11'
           architecture: x64
-          server-id: snapshots # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: MAVEN_USERNAME # env variable for username in deploy
-          server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
+          server-id: maven.forgerock.org-community-snapshots # Value of the distributionManagement/repository/id field of the pom.xml
+          server-username: REPOSITORY_USERNAME # env variable for username in deploy
+          server-password: REPOSITORY_ACCESS_TOKEN # env variable for token in deploy
 
 
       - name: Release package
         run:  mvn -B deploy
         env:
-          MAVEN_USERNAME: ${{ secrets.FR_ARTIFACTORY_USER }}
-          MAVEN_CENTRAL_TOKEN: ${{ secrets.FR_ARTIFACTORY_TOKEN }}
+          REPOSITORY_USERNAME: ${{ secrets.FR_ARTIFACTORY_USER }}
+          REPOSITORY_ACCESS_TOKEN: ${{ secrets.FR_ARTIFACTORY_TOKEN }}
