--- a/pom.xml
+++ b/pom.xml
@@ -27,97 +27,93 @@
     <groupId>com.forgerock.openbanking.uk</groupId>
     <artifactId>openbanking-uk-datamodel</artifactId>
     <packaging>jar</packaging>
-    <version>3.1.2.27-SNAPSHOT</version>
+    <version>3.1.6.0-SNAPSHOT</version>
     <name>openbanking-uk-datamodel</name>
     <description>
-        A Java UK Data Model, generated from the swagger, to help implementing the Open Banking standard : https://www.openbanking.org.uk/read-write-apis/
+        A Java UK Data Model, generated from the swagger, to help implementing the Open Banking standard :
+        https://www.openbanking.org.uk/read-write-apis/
     </description>
     <url>https://github.com/OpenBankingToolkit/openbanking-uk-datamodel</url>
 
-    <parent>
-        <groupId>com.forgerock.openbanking</groupId>
-        <artifactId>forgerock-openbanking-starter-parent</artifactId>
-        <version>1.0.84</version>
-        <relativePath /> <!-- lookup parent from repository -->
-    </parent>
-    
     <properties>
-        <jersey.version>2.30</jersey.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- libraries -->
         <springfox-version>2.9.2</springfox-version>
+        <javax.annotations.version>1.3.2</javax.annotations.version>
+        <jodatime.version>2.9.9</jodatime.version>
+        <javax.validation>2.0.1.Final</javax.validation>
+        <jackson-databind.version>2.9.10.1</jackson-databind.version>
+        <assertj.core.version>3.17.2</assertj.core.version>
+        <hibernate.validator.version>5.2.4.Final</hibernate.validator.version>
+        <javax.el.version>3.0.1-b11</javax.el.version>
+        <jaxb.javax.version>2.2</jaxb.javax.version>
+        <!-- test -->
+        <junit.version>4.13.1</junit.version>
+        <!-- plugins -->
+        <license-maven-plugin.version>3.0</license-maven-plugin.version>
+        <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
     </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.glassfish.jersey</groupId>
-                <artifactId>jersey-bom</artifactId>
-                <version>${jersey.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
         <dependency>
-            <groupId>com.nimbusds</groupId>
-            <artifactId>nimbus-jose-jwt</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.9</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${springfox-version}</version>
         </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox-version}</version>
-        </dependency>
         <!-- Bean Validation API support -->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
+            <version>${javax.validation}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>${jodatime.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
+            <version>${javax.annotations.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <version>${assertj.core.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <version>5.2.4.Final</version>
+            <version>${hibernate.validator.version}</version>
             <artifactId>hibernate-validator</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
+            <version>${jaxb.javax.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.el</artifactId>
-            <version>3.0.1-b11</version>
+            <version>${javax.el.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -134,15 +130,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
-                <configuration>
-                    <scmCommentPrefix>[ci skip]</scmCommentPrefix>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -150,6 +140,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
+                <configuration>
+                    <tagNameFormat>@{version}</tagNameFormat>
+                    <scmCommentPrefix>Release candidate:</scmCommentPrefix>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.mycila</groupId>
@@ -183,37 +182,10 @@
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>travis</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
-                        <configuration>
-                            <passphrase>${env.GPG_PASSPHRASE}</passphrase>
-                            <keyname>DA5A83E21839FB2F60811F8E56780DDF77F42B2C</keyname>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <scm>
         <connection>scm:git:git@github.com:OpenBankingToolkit/openbanking-uk-datamodel.git</connection>
-        <developerConnection>scm:git:git@github.com:OpenBankingToolkit/openbanking-uk-datamodel.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:OpenBankingToolkit/openbanking-uk-datamodel.git
+        </developerConnection>
         <url>https://github.com/OpenBankingToolkit/openbanking-uk-datamodel.git</url>
         <tag>HEAD</tag>
     </scm>
@@ -234,35 +206,14 @@
 
     <repositories>
         <repository>
-            <id>maven.forgerock.org-community</id>
-            <name>maven.forgerock.org-releases</name>
-            <url>https://maven.forgerock.org:443/repo/community</url>
-        </repository>
-        <repository>
-            <id>maven.forgerock.org-community-snapshots</id>
-            <name>maven.forgerock.org-snapshots</name>
-            <url>https://maven.forgerock.org:443/repo/community</url>
-        </repository>
-        <repository>
-            <id>jcenter</id>
-            <url>https://jcenter.bintray.com/</url>
-        </repository>
-        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo1.maven.org/maven2</url>
+            <layout>default</layout>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-            <id>bintray-openbanking-toolkit-OpenBankingToolKit</id>
-            <name>bintray</name>
-            <url>https://dl.bintray.com/openbanking-toolkit/OpenBankingToolKit</url>
         </repository>
     </repositories>
 
-    <developers>
-        <developer>
-            <name>Quentin Castel</name>
-            <email>quentin.castel@forgerock.com</email>
-            <organization>ForgeRock</organization>
-            <organizationUrl>http://www.forgerock.com</organizationUrl>
-        </developer>
-    </developers>
 </project>
