--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <!-- plugins -->
         <license-maven-plugin.version>3.0</license-maven-plugin.version>
         <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
+        <openapi-generator.version>4.3.1</openapi-generator.version>
     </properties>
 
     <dependencies>
@@ -179,8 +180,55 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <version>${openapi-generator.version}</version>
+            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <!-- Swagger code generation. Note that instructions for this profile are in the README.md and must be kept in sync. -->
+            <id>code-gen</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.openapitools</groupId>
+                        <artifactId>openapi-generator-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- Only one input file is supported. Uncomment the relevant spec as required -->
+                                    <inputSpec>${project.basedir}/src/main/resources/specification/account-info-openapi.yaml</inputSpec>
+                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/confirmation-funds-openapi.yaml</inputSpec>-->
+                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/event-notifications-openapi.yaml</inputSpec>-->
+                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/events-openapi.yaml</inputSpec>-->
+                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/payment-initiation-openapi.yaml</inputSpec>-->
+                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/vrp-openapi.yaml</inputSpec>-->
+                                    <output>${project.build.directory}/generated-sources/swagger</output>
+                                    <generatorName>spring</generatorName>
+                                    <!-- Change the package here as per the chosen spec above -->
+                                    <modelPackage>
+                                        uk.org.openbanking.datamodel.account
+                                    </modelPackage>
+                                    <generateApis>false</generateApis>
+                                    <configOptions>
+                                        <dateLibrary>joda</dateLibrary>
+                                    </configOptions>
+                                    <addCompileSourceRoot>false</addCompileSourceRoot>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <scm>
         <connection>scm:git:git@github.com:OpenBankingToolkit/openbanking-uk-datamodel.git</connection>
