45: Regenerate funds conformation models from 3.1.8r5 swagger
Issue: https://github.com/OpenBankingToolkit/openbanking-toolkit/issues/45

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,6 @@
         <!-- plugins -->
         <license-maven-plugin.version>3.0</license-maven-plugin.version>
         <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
-	<!-- <openapi-generator.version>4.3.1</openapi-generator.version> -->
         <openapi-generator.version>5.1.0</openapi-generator.version>
     </properties>
 
@@ -206,21 +205,21 @@
                                 <configuration>
                                     <!-- Only one input file is supported. Uncomment the relevant spec as required -->
 				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/account-info-openapi.yaml</inputSpec>-->
-                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/confirmation-funds-openapi.yaml</inputSpec>-->
-                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/event-notifications-openapi.yaml</inputSpec>-->
+                                    <inputSpec>${project.basedir}/src/main/resources/specification/confirmation-funds-openapi.yaml</inputSpec>
+				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/event-notifications-openapi.yaml</inputSpec>-->
                                     <!--<inputSpec>${project.basedir}/src/main/resources/specification/events-openapi.yaml</inputSpec>-->
                                     <!--<inputSpec>${project.basedir}/src/main/resources/specification/payment-initiation-openapi.yaml</inputSpec>-->
-                                    <inputSpec>${project.basedir}/src/main/resources/specification/vrp-openapi.yaml</inputSpec>
+				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/event-notifications-openapi.yaml</inputSpec>-->
                                     <output>${project.build.directory}/generated-sources/swagger</output>
                                     <generatorName>spring</generatorName>
                                     <!-- Change the package here as per the chosen spec above -->
                                     <modelPackage>
-                                        uk.org.openbanking.datamodel.vrp
+                                        uk.org.openbanking.datamodel.fund
                                     </modelPackage>
 				    <apiPackage>
-					com.forgerock.openbanking.aspsp.rs.api.vrp
+					com.forgerock.openbanking.aspsp.rs.api.funds.v3_1_8
 				    </apiPackage>
-                                    <generateApis>false</generateApis>
+                                    <generateApis>true</generateApis>
                                     <configOptions>
                                         <dateLibrary>joda</dateLibrary>
                                     </configOptions>
