--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,15 @@
     under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.forgerock.openbanking.uk</groupId>
     <artifactId>openbanking-uk-datamodel</artifactId>
     <packaging>jar</packaging>
-    <version>3.1.8.6-SNAPSHOT</version>
+    <version>3.1.9.0-SNAPSHOT</version>
     <name>openbanking-uk-datamodel</name>
     <description>
         A Java UK Data Model, generated from the swagger, to help implementing the Open Banking standard :
@@ -204,23 +205,18 @@
                                 </goals>
                                 <configuration>
                                     <!-- Only one input file is supported. Uncomment the relevant spec as required -->
-				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/account-info-openapi.yaml</inputSpec>-->
-				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/confirmation-funds-openapi.yaml</inputSpec>-->
-				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/event-notifications-openapi.yaml</inputSpec>-->
-                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/events-openapi.yaml</inputSpec>-->
-                                    <!--<inputSpec>${project.basedir}/src/main/resources/specification/payment-initiation-openapi.yaml</inputSpec>-->
-				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/event-notifications-openapi.yaml</inputSpec>-->
-				    <!--<inputSpec>${project.basedir}/src/main/resources/specification/vrp-openapi-3.1.9r3.yaml</inputSpec>-->
-				    <inputSpec>${project.basedir}/src/main/resources/specification/customer-info-v1.0.yaml</inputSpec>
+<!--                                    <inputSpec>-->
+<!--                                        ${project.basedir}/src/main/resources/specification/v3.1.9r5/vrp-openapi.yaml-->
+<!--                                    </inputSpec>-->
                                     <output>${project.build.directory}/generated-sources/swagger</output>
                                     <generatorName>spring</generatorName>
                                     <!-- Change the package here as per the chosen spec above -->
                                     <modelPackage>
-                                        uk.org.openbanking.datamodel.customerinfo
+                                        uk.org.openbanking.datamodel.vrp
                                     </modelPackage>
-				    <apiPackage>
-					com.forgerock.openbanking.aspsp.rs.api.customerinfo.v1_0
-				    </apiPackage>
+                                    <apiPackage>
+                                        com.forgerock.openbanking.aspsp.rs.api.payment.v3_1_9.vrp
+                                    </apiPackage>
                                     <generateApis>true</generateApis>
                                     <configOptions>
                                         <dateLibrary>joda</dateLibrary>
